# IA

./: .gitignore  pyproject.toml
api-ia/: pyproject.toml
api-ia/03_02/end/: facadeKey.py
api-ia/1/: abstractFactory.py  builder.py  main.py  singleton.py
deepLearning/: pyproject.toml  requirements.txt
deepLearning/I/: main.py
deepLearning/perceptron/: perception.py
keras/: pyproject.toml  requirements.txt
keras/keras/: modelo2.py  wine.py
keras/keras/kerasProjeto/: pyvenv.cfg
keras/tests/: test_keras.py
tensorFlow/: pyproject.toml  requirements-venv.txt  tensorcode11.py  tensorflow1.py  tensorflow12.py
