[tool.poetry]
name = "IA Activities free with purpouse learning something"
version = "0.0.1"
description = "IA is good and Bad, the cool is keep beside hir"
authors = ["Diego Go"]
license = "Private"

[tool.poetry.dependencies]
python = "3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
