[tool.poetry]
name = "Api-fast"
version = "0.1.0"
description = ""
authors = ["Diego Go <dgomes@Diegos-MacBook-Pro.local>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
simpleaudio = "^1.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
