[tool.poetry]
name = "kerasProjeto"
version = "0.1.0"
description = ""
authors = ["Diego Go "]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.4.3"
h5py = "^3.7.0"
keras = "2.9.0"
tensorflow = "2.9.1"
[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
